Topology finished(need revision) AA: Problem 43 finished.

--- a/asdf.tex
+++ b/asdf.tex
@@ -85,7 +85,7 @@ i_3^{-1}((a,b))=
 \end{equation*}
 Therefore, $i_4$ is continuous function from $\rr\setminus\{0\}$ to $\rr\setminus\{0\}$. $i_5:\rr\times \rr\setminus\{0\}\rightarrow \rr$ by $i_5=i_3 \circ (\text{id},i_4)$ is continuous and $f/g:X\times X\rightarrow \rr$ by $f/g=i_5 \circ (f,g)$ is continuous for $g\neq 0$.
 \section*{Problem 3}
-Let $f(x,y)=(\frac{x+\sqrt{1-y^2}}{2}, y)$ from $\rr^2$ to $\rr^2$. I'll first prove that $\sqrt{y}$ is continuous. Since the domain of $\sqrt{y}$ is $\rr^+\cap \{0\}$, let open interval $(a, b)$, $0\leq a<b$. Then, inverse image of $(a,b)$ in $\sqrt{y}$ is $(\sqrt{a}, \sqrt{b})$. Therefore, it is continuous, and $\sqrt{1-y^2}=h_1(y)\circ h_2(y)$, which is $h_1(y)=\sqrt{y}$, $h_2(y)=1-y^2$, is continuous. Therefore, $g_1(x,y)=y$, $g_2(x,y)=x$, $g_3(x,y)=\sqrt{1-y^2}$, $g_4(x,y)=1/2$ are continuous, and $g_4(g_2+g_3)$ is continuous by problem 2. Therefore, $f(x,y)=(g_4(x,y)(g_2(x,y)+g_3(x,y),g_1(x,y))$ is continuous. Also, it is one-to-one since if $f(x_1, y_1)=f(x_2,y_2)$, $y_1=y_2$ and it implies $x_1=x_2$. It is onto function since for $(x_0, y_0)$, there exists $(x_1,y_1)=(2x_0-\sqrt{1-y_0^2},y_0)$ satisfying $f(x_1,y_1)=(x_0,y_0)$. The inverse function $f^{-1}(x,y)=(2x-\sqrt{1-y_0^2}, y)$ and it's also continuous function from $\rr^2$ to $\rr^2$ by the same argument above. Finally, let's consider $f|_X$, then the codomain of the $f$ is $Y$ since $\frac{1}{4}(x+\sqrt{1-y^2})^2+y^2=$ .... Since $f|_X$ is continuous and its image is $Y$, by denoting inclusion $i_1:\rr\rightarrow Y$, $i_2\circ f|_X$ is continuous by problem 1. The inverse function $i_2\circ f^{-1}|_Y$, denoting inclusion function $i_2:\rr\rightarrow X$, it is also continuous function. Therefore, $X$ and $Y$ is homeomorphic.
+Let $f(x,y)=(\frac{x+\sqrt{1-y^2}}{2}, y)$ from $\rr^2$ to $\rr^2$. I'll first prove that $\sqrt{y}$ is continuous. Since the domain of $\sqrt{y}$ is $\rr^+\cup \{0\}$, let open interval $(a, b)$, $0\leq a<b$. Then, inverse image of $(a,b)$ in $\sqrt{y}$ is $(\sqrt{a}, \sqrt{b})$. Therefore, it is continuous, and $\sqrt{1-y^2}=h_1(y)\circ h_2(y)$, which is $h_1(y)=\sqrt{y}$, $h_2(y)=1-y^2$, is continuous. $g_1(x,y)=y$, $g_2(x,y)=x$, $g_3(x,y)=\sqrt{1-y^2}$, $g_4(x,y)=1/2$ are continuous, and $g_4(g_2+g_3)$ is continuous by problem 2, so $f(x,y)=(g_4(x,y)(g_2(x,y)+g_3(x,y),g_1(x,y))$ is continuous. Also, it is one-to-one since if $f(x_1, y_1)=f(x_2,y_2)$, $y_1=y_2$ and it implies $x_1=x_2$. It is onto function since for $(x_0, y_0)$, there exists $(x_1,y_1)=(2x_0-\sqrt{1-y_0^2},y_0)$ satisfying $f(x_1,y_1)=(x_0,y_0)$. The inverse function $f^{-1}(x,y)=(2x-\sqrt{1-y_0^2}, y)$ and it's also continuous function from $\rr^2$ to $\rr^2$ by the same argument above. Finally, let's consider $f|_X$, then the codomain of the $f$ is $Y$ since $\frac{1}{4}(x+\sqrt{1-y^2})^2+y^2 \leq \frac{1}{4}(2\sqrt{1-y^2})^2+y^2=1$ and $\frac{x+\sqrt{1-y^2}}{2}\geq 0$. Since $f|_X$ is continuous and its image is $Y$, by denoting inclusion $i_1:\rr\rightarrow Y$, $i_2\circ f|_X$ is continuous by problem 1. The inverse function $i_2\circ f^{-1}|_Y$, denoting inclusion function $i_2:\rr\rightarrow X$, it is also continuous function. Therefore, $X$ and $Y$ is homeomorphic.
 
 \section*{Problem 4}
 Since $A,B$ are closed in $X,Y$, $A^c,B^c$ are open in $X,Y$. Also, $(A\times B)^c=A^c\times Y \cup X \times B^c $ and since $X,A^c$ are open in $X$ and $Y,B^c$ are open in $Y$, $(A\times B)^c$ is open in $X\times Y$ and therefore, $A\times B$ is closed in $X\times Y$. 
